--- a/templates/registro.html
+++ b/templates/registro.html
@@ -2,41 +2,35 @@
 <html>
 <head>
     <title>La Guia del Kchimbo</title>
-    <!-- La siguiente línea carga el logo de la página desde la carpeta static -->
-    <img src="{{ url_for('static', filename='Imagenes/Logoweb.webp') }}">
-    <!-- La siguiente línea establece el ícono de la página en la pestaña del navegador -->
-    <link rel="icon" href="{{ url_for('static', filename='Imagenes/Logoweb.webp') }}">
     <!-- La siguiente línea carga la hoja de estilos CSS desde la carpeta static -->
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='Estilo/estilos.css') }}">
-    <meta charset="utf-8">
-    <meta name="keywords" content="Registro">
+    <link rel="stylesheet" href="/Estilo/estilos.css">
     <style>
-        /* Estilos para el bloque de registro */
-        #rgs {
-            text-align: center; /* Alineación centrada del texto */
+        /* Estilos para el cuerpo de la página */
+        body {
             font-family: Arial, sans-serif; /* Familia de fuentes */
-            font-size: 16px; /* Tamaño de fuente */
-            line-height: 1.6; /* Altura de línea */
-            color: rgb(231, 27, 27); /* Color del texto */
-            margin-bottom: 10px; /* Margen inferior */
-            border: 1px solid #ccc; /* Borde sólido de 1 píxel con color gris */
-            padding: 15px; /* Relleno interno */
-            border-radius: 25px; /* Borde redondeado */
-            box-shadow: 2px 2px 5px rgba(216, 13, 13, 0.1); /* Sombra */
+            background-color: #f4f4f4; /* Color de fondo */
+            margin: 0; /* Elimina los márgenes predeterminados */
+            padding: 0; /* Elimina el relleno predeterminado */
+            display: flex; /* Utiliza el modelo de caja flexible para centrar el contenido verticalmente */
+            justify-content: center; /* Centra el contenido horizontalmente */
+            align-items: center; /* Centra el contenido verticalmente */
+            height: 100vh; /* Utiliza el 100% de la altura de la ventana */
         }
 
-        label {
-            color: rgb(0, 0, 0); /* Color del texto */
-            font-family: 'Courier New', Courier, monospace; /* Familia de fuentes */
-            font-size: 13px; /* Tamaño de fuente */
+        /* Estilos para el contenedor del formulario de registro */
+        #register-container {
+            background-color: #ffffff; /* Color de fondo del contenedor de registro */
+            border-radius: 10px; /* Borde redondeado */
+            padding: 20px; /* Relleno interno */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra */
         }
 
-        /* Estilos para los campos de texto */
+        /* Estilos para los campos de entrada de texto */
         input[type="text"],
         input[type="password"],
         input[type="date"],
         select {
-            width: calc(100% - 30px); /* Ancho calculado con margen izquierdo y derecho */
+            width: 100%; /* Ancho completo */
             padding: 10px; /* Relleno interno */
             margin-bottom: 15px; /* Margen inferior */
             border: 1px solid #ccc; /* Borde sólido con color gris */
@@ -44,85 +38,141 @@
             box-sizing: border-box; /* Incluye el relleno y el borde en el ancho total */
         }
 
-        /* Estilos para el botón de registro */
+        /* Estilos para el botón de enviar */
         input[type="submit"] {
-            width: calc(100% - 30px); /* Ancho calculado con margen izquierdo y derecho */
+            width: 100%; /* Ancho completo */
             padding: 10px; /* Relleno interno */
             background-color: #4caf50; /* Color de fondo */
             color: #ffffff; /* Color del texto */
             border: none; /* Sin borde */
             border-radius: 5px; /* Borde redondeado */
             cursor: pointer; /* Cursor de tipo puntero */
-            transition: background-color 0.3s; /* Transición suave del color de fondo */
         }
 
-        /* Estilos para el botón de registro al pasar el ratón */
         input[type="submit"]:hover {
             background-color: #45a049; /* Cambio de color de fondo al pasar el ratón */
         }
+
+        /* Estilos para las etiquetas de los campos de entrada */
+        .input-label {
+            font-weight: bold; /* Texto en negrita */
+        }
     </style>
+    <meta charset="utf-8">
+    <meta name="keywords" content="login">
 </head>
 <body>
 <main>
-    <div>
-        <h1 id="rgs">Crear Cuenta 
-            <form method="post" action="/registro"> <!-- Corregir la acción del formulario -->
-                <!-- Etiqueta y campo de texto para ingresar el nombre -->
-                <label for="NomApe">Ingresa tu nombre</label>
-                <input type="text" id="NomApe" name="nombre" required=""><br>
-                <!-- Etiqueta y campo de texto para ingresar el DNI -->
-                <label for="dni">Ingresa tu DNI</label>
-                <input type="text" id="dni" name="dni" required=""><br>
-                <!-- Etiqueta y campo de texto para ingresar la fecha de nacimiento -->
-                <label for="fechaNac">Ingresa tu fecha de nacimiento</label>
-                <input type="date" id="fechaNac" name="fecha_nacimiento" required=""><br>
-                <!-- Etiqueta y campo de texto para ingresar el código de estudiante -->
-                <label for="codEst">Ingresa tu código de estudiante</label>
-                <input type="text" id="codEst" name="codigo_estudiante" required=""><br>
-                <!-- Etiqueta y menú desplegable para seleccionar la facultad -->
-                <label for="combo-box">Ingresa tu Facultad</label>
-                <select id="combo-box" name="facultad">
-                    <option value="opcion 1">Seleccione una facultad</option>
-                    <option value="opcion 2">Facultad de
-                        Administración</option>
-                    <option value="opcion 3">Facultad de Ciencias Económicas</option>
-                    <option value="opcion 4">Facultad de Ciencias Financieras y Contables</option>
-                    <option value="opcion 5">Facultad de Ciencias
-                        Sociales</option>
-                    <option value="opcion 6">Facultad de Derecho y Ciencia Política
-                    </option>
-                    <option value="opcion 7">Facultad de
-                        Educación</option>
-                    <option value="opcion 8">Facultad de Humanidades</option>
-                    <option value="opcion 9">Facultad de Ingeniería Geográfica, Ambiental y Ecoturismo</option>
-                    <option value="opcion 10">Facultad de Oceanografía, Pesquería, Ciencias Alimentarias y Acuicultura
-                    </option>
-                    <option value="opcion 11">Facultad de Ingeniería Electrónica e Informática
-                    </option>
-                    <option value="opcion 12">Facultad de Ciencias Naturales y Matemática</option>
-                    <option value="opcion 13">Facultad de Medicina "Hipólito Unanue"</option>
-                    <option value="opcion 14">Facultad de
-                        Odontología</option>
-                    <option value="opcion 15">Facultad de Tecnología Médica</option>
-                    <option value="opcion 16">Facultad de Psicología</option>
-                    </option>
-                    <!-- Otras opciones omitidas para abreviar -->
-                </select><br>
-                <!-- Etiqueta y campo de texto para ingresar el correo electrónico -->
-                <label for="correo">Ingresa tu correo electrónico</label>
-                <input type="text" id="correo" name="correo_electronico" required=""><br>
-                <!-- Etiqueta y campo de texto para ingresar la contraseña -->
-                <label for="contraseña">Ingresa tu contraseña</label>
-                <input type="password" id="contraseña" name="contraseña" required=""><br> <!-- Cambiar el tipo de input a 'password' -->
-                <!-- Botón para enviar el formulario -->
-                <input type="submit" value="Registrarse" id="registroBtn">
-            </form>
-        </h1>
+    <!-- Contenedor del formulario de registro -->
+    <div id="register-container">
+        <h1>Crear Cuenta</h1>
+        <!-- Formulario de registro -->
+        <form id="register-form" method="post">
+            <!-- Etiqueta y campo de texto para ingresar el nombre -->
+            <label class="input-label" for="nombre">Ingresa tu nombre</label>
+            <input type="text" id="nombre" name="nombre" required><br>
+            <!-- Etiqueta y campo de texto para ingresar el DNI -->
+            <label class="input-label" for="dni">Ingresa tu DNI</label>
+            <input type="text" id="dni" name="dni" required><br>
+            <!-- Etiqueta y campo de texto para ingresar la fecha de nacimiento -->
+            <label class="input-label" for="fecha_nacimiento">Ingresa tu fecha de nacimiento</label>
+            <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required><br>
+            <!-- Etiqueta y campo de texto para ingresar el código de estudiante -->
+            <label class="input-label" for="codigo_estudiante">Ingresa tu código de estudiante</label>
+            <input type="text" id="codigo_estudiante" name="codigo_estudiante" required><br>
+            <!-- Etiqueta y menú desplegable para seleccionar la facultad -->
+            <label class="input-label" for="facultad">Ingresa tu Facultad</label>
+            <select id="facultad" name="facultad">
+                <option value="opcion 1">Seleccione una facultad</option>
+                <option value="opcion 2">Facultad de
+                    Administración</option>
+                <option value="opcion 3">Facultad de Ciencias Económicas</option>
+                <option value="opcion 4">Facultad de Ciencias Financieras y Contables</option>
+                <option value="opcion 5">Facultad de Ciencias
+                    Sociales</option>
+                <option value="opcion 6">Facultad de Derecho y Ciencia Política
+                </option>
+                <option value="opcion 7">Facultad de
+                    Educación</option>
+                <option value="opcion 8">Facultad de Humanidades</option>
+                <option value="opcion 9">Facultad de Ingeniería Geográfica, Ambiental y Ecoturismo</option>
+                <option value="opcion 10">Facultad de Oceanografía, Pesquería, Ciencias Alimentarias y Acuicultura
+                </option>
+                <option value="opcion 11">Facultad de Ingeniería Electrónica e Informática
+                </option>
+                <option value="opcion 12">Facultad de Ciencias Naturales y Matemática</option>
+                <option value="opcion 13">Facultad de Medicina "Hipólito Unanue"</option>
+                <option value="opcion 14">Facultad de
+                    Odontología</option>
+                <option value="opcion 15">Facultad de Tecnología Médica</option>
+                <option value="opcion 16">Facultad de Psicología</option>
+                </option>
+                <!-- Otras opciones de facultades omitidas para abreviar -->
+            </select><br>
+            <!-- Etiqueta y campo de texto para ingresar el correo electrónico -->
+            <label class="input-label" for="correo_electronico">Ingresa tu correo electrónico</label>
+            <input type="text" id="correo_electronico" name="correo_electronico" required><br>
+            <!-- Etiqueta y campo de texto para ingresar la contraseña -->
+            <label class="input-label" for="contraseña">Ingresa tu contraseña</label>
+            <input type="password" id="contraseña" name="contraseña" required><br>
+            <!-- Botón para enviar el formulario -->
+            <input type="submit" value="Registrarse">
+        </form>
+        <!-- Mensaje de error -->
+        <div id="error-message" style="color: red; display: none;"></div>
     </div>
 </main>
 <footer>
-    
+    <!-- Footer -->
 </footer>
+
+<!-- Script para manejar el evento submit del formulario -->
+<script>
+    document.getElementById('register-form').addEventListener('submit', function(event) {
+        event.preventDefault(); // Evita que el formulario se envíe automáticamente
+
+        // Obtener los valores del formulario de registro
+        var nombre = document.getElementById('nombre').value;
+        var dni = document.getElementById('dni').value;
+        var fecha_nacimiento = document.getElementById('fecha_nacimiento').value;
+        var codigo_estudiante = document.getElementById('codigo_estudiante').value;
+        var facultad = document.getElementById('facultad').value;
+        var correo_electronico = document.getElementById('correo_electronico').value;
+        var contraseña = document.getElementById('contraseña').value;
+
+        // Realizar la solicitud al servidor para registrar al usuario
+        var xhr = new XMLHttpRequest();
+        xhr.open('POST', '/conexion BD/BD1.php', true);
+        xhr.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+        xhr.onreadystatechange = function() {
+            if (xhr.readyState == 4 && xhr.status == 200) {
+                var response = xhr.responseText;
+                if (response.trim() === 'success') {
+                    // Limpiar campos del formulario
+                    document.getElementById('nombre').value = '';
+                    document.getElementById('dni').value = '';
+                    document.getElementById('fecha_nacimiento').value = '';
+                    document.getElementById('codigo_estudiante').value = '';
+                    document.getElementById('facultad').value = 'opcion 1';
+                    document.getElementById('correo_electronico').value = '';
+                    document.getElementById('contraseña').value = '';
+                    // Redirigir al usuario a la página de inicio
+                    window.location.href = 'inicio.html';
+                } else {
+                    // Manejar el error de registro si es necesario
+                    console.error('Error al registrar el usuario');
+                }
+            }
+        };
+        // Enviar los datos del formulario de registro al servidor
+        xhr.send('nombre=' + encodeURIComponent(nombre) +
+                '&dni=' + encodeURIComponent(dni) +
+                '&fecha_nacimiento=' + encodeURIComponent(fecha_nacimiento) +
+                '&codigo_estudiante=' + encodeURIComponent(codigo_estudiante) +
+                '&facultad=' + encodeURIComponent(facultad) +
+                '&correo_electronico=' + encodeURIComponent(correo_electronico) +
+                '&contraseña=' + encodeURIComponent(contraseña));
+    });
+</script>
 </body>
 </html>
-
