--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -6,7 +6,7 @@
     <title>El Ricón del cachimbo</title>
     <!-- Se corrigió la URL de la fuente de Material Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/Estilo/prueba1.css">
+    <link rel="stylesheet" href="/Estilo/Iconos.css">
     <style>
         .botones-acceso {
             position: fixed;
