--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Ricón del cachimbo</title>
     <!-- Se corrigió la URL de la fuente de Material Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/Estilo/prueba1.css">
+    <link rel="stylesheet" href="../Estilo/Iconos.css">
     <style>
         .botones-acceso {
             position: fixed;
@@ -14,25 +15,28 @@
             right: 0;
             margin: 20px;
         }
+
         .botones-acceso ul {
             list-style-type: none;
             padding: 0;
             margin: 0;
         }
+
         .botones-acceso ul li {
             display: inline;
             margin-right: 10px;
         }
     </style>
 </head>
+
 <body>
     <!-- Botones de acceso y registro en la esquina superior derecha -->
     <div class="botones-acceso">
         <ul>
-            <li><a href="/templates/login.html">Acceder</a></li>
-            <li><a href="/templates/registro.html">Crear Cuenta</a></li>
+            <li><a href="../templates/login.html">Acceder</a></li>
+            <li><a href="../templates/registro.html">Crear Cuenta</a></li>
         </ul>
-    </div>    
+    </div>
     <aside class="sidebar">
         <div class="logo">
             <img src="../Imagenes/logo.png" alt="logo">
@@ -58,7 +62,7 @@
                 <a href="#">Deportes</a>
             </li>
             <li>
-                <i class="fas fa-users"></i></i> 
+                <i class="fas fa-users"></i></i>
                 <a href="#">Seminarios</a>
             </li>
             <li>
@@ -76,17 +80,18 @@
             <h4>Cuenta</h4>
             <li>
                 <i class="fas fa-user-circle"></i>
-                <a href="#">Perfil</a>
+                <a href="/templates/Perfil.html">Perfil</a>
             </li>
             <li>
                 <i class="fas fa-bell"></i>
-                <a href="#">Notificaciones</a>
+                <a href="/templates/Notificaciones.html">Notificaciones</a>
             </li>
             <li class="logout-link">
                 <i class="fas fa-sign-out-alt"></i>
-                <a href="#">Cerrar Sesión</a>
+                <a href="/templates/inicio.html">Cerrar Sesión</a><!-- Colocar la pagina inicial que creara willy-->
             </li>
         </ul>
     </aside>
 </body>
+
 </html>
