--- a/Estilo/Iconos.css
+++ b/Estilo/Iconos.css
@@ -25,10 +25,10 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    background: rgba(255, 255, 255, 0.2);
+    /*background: rgba(255, 255, 255, 0.2);*/
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(10px);
-    border-right: 1px solid rgba(255, 255, 255, 0.7);
+    /*border-right: 1px solid rgba(255, 255, 255, 0.7);*/
     transition: width 0.3s ease;
 }
 
