--- a/templates/eventos.html
+++ b/templates/eventos.html
@@ -6,10 +6,10 @@
     <title>El Ricón del cachimbo</title>
     <!-- Se corrigió la URL de la fuente de Material Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="../Estilo/seminario.css">
+    <link rel="stylesheet" href="../Estilo/eventos.css">
 </head>
 <body>
-    <h1>SEMINARIOS</h1><br>
+    <h1>EVENTOS</h1><br>
     <!-- Botones de acceso y registro en la esquina superior derecha -->
     <div>
         <div class="contenedor">
@@ -78,10 +78,10 @@
     </div>
     <div>
         <ul class="social-buttons">
-            <li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=http://127.0.0.1:3000/templates/seminario.html"  target="_blank"><i class="fab fa-facebook"></i></a></li>
-            <li class="whatsapp"><a href="whatsapp://send?text=http://127.0.0.1:3000/templates/seminario.html#" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
-            <li class="linkedin"><a href="https://www.linkedin.com/sharing/share-offsite/?url=http://127.0.0.1:3000/templates/seminario.html#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-            <li class="twitter"><a href="https://twitter.com/intent/tweet?url=http://127.0.0.1:3000/templates/seminario.html#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li class="facebook"><a href="https://www.facebook.com/sharer/sharer.php?u=http://127.0.0.1:3000/templates/eventos.html"  target="_blank"><i class="fab fa-facebook"></i></a></li>
+            <li class="whatsapp"><a href="whatsapp://send?text=http://127.0.0.1:3000/templates/eventos.html#" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+            <li class="linkedin"><a href="https://www.linkedin.com/sharing/share-offsite/?url=http://127.0.0.1:3000/templates/eventos.html#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+            <li class="twitter"><a href="https://twitter.com/intent/tweet?url=http://127.0.0.1:3000/templates/eventos.html#" target="_blank"><i class="fab fa-twitter"></i></a></li>
         </ul>
     </div>
     </div>
