--- a/Estilo/seminario.css
+++ b/Estilo/seminario.css
@@ -1,116 +1,283 @@
-        /* Estilos para el cuerpo de la página */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-        li {
-            margin-bottom: 10px;
-            display: inline-block;
-            
-        }
-        .container {
-            width: 100%;
-            display: flex;
-            max-width: 1100px;
-        }
-        .card {
-            width: 100%;
-            margin: 20px;
-            border-radius: 6px;
-            overflow: hidden;
-            background: #fff;
-            box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
-            cursor: default;
-            transition: all 40ms ease;
-        }
-        .card:hover {
-            box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
-            transform: translate(-3%);
-        }
-        .card img {
-            width: 100%;
-            height: 210px;
-        }
-        .card .contenido {
-            padding: 15px;
-            text-align: center;
-        }
-        .card .contenido p {
-            line-height: 1.5;
-            color: #6a6a6a;
-        }
-        .card .contenido h3 {
-            font-weight: 400;
-            margin-bottom: 15px;
-        }
-        .card .contenido a {
-            text-decoration: none;
-            display: inline-block;
-            padding: 10px;
-            margin-top: 10px;
-            color: #2fb4cc;
-            border: 1px solid #2fb4cc;
-            border-radius: 4px;
-            transition: all 400ms ease;
-        }
-        .card .contenido a:hover {
-            background: #2fb4cc;
-            color:#fff
-        }
-         /* Estilos base para los botones */
-        .social-buttons {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: flex;
-        }
-    .social-buttons li {
-    margin-right: 10px;
-    }
-  /* Estilos para las burbujas */
-    .social-buttons li a {
-    display: block;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #0077cc; /* Cambia este color por el color de fondo deseado */
-    text-align: center;
-    line-height: 50px;
-    color: white;
-    font-size: 20px;
-    text-decoration: none;
-    transition: all 0.3s ease;
-    }
-  /* Efecto hover */
-    .social-buttons li a:hover {
-    transform: scale(1.1); /* Cambia la escala para ajustar el efecto deseado */
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3); /* Sombra para el efecto de elevación */
-    }
-  /* Estilos para iconos específicos */
-  /* Puedes añadir más estilos personalizados para cada red social */
-    .social-buttons .facebook a {
-    background-color: #3b5998; /* Color de Facebook */
-    }
-    .social-buttons .whatsapp a {
-    background-color: #1da1f2; /* Color de Twitter */
-    }
-    .social-buttons .linkedin a {
-    background-color: #c13584; /* Color de Instagram */
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-    .social-buttons .twitter a {
-    background-color: #20d1c2; /* Color de Instagram */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+h1 {
+    text-align: center; /* Centra el texto */
+    font-family: 'Roboto', sans-serif; /* Selecciona una fuente bonita (en este caso, Roboto) */
+    font-size: 2.5rem; /* Tamaño de fuente grande para resaltar */
+    color: #333; /* Color de texto */
+    /* Otros estilos opcionales según tu preferencia */
+    margin-top: 20px; /* Ajusta el margen superior según sea necesario */
+    margin-bottom: 20px; /* Ajusta el margen inferior según sea necesario */
+}
+ul {
+    list-style: none;
+    padding: 0;
+}
+li {
+    margin-bottom: 10px;
+    display: inline-block;
+}
+.container {
+    width: 90%;
+    display: flex;
+    max-width: 1100px;
+}
+.card {
+    width: 80vw;
+    margin: 20px;
+    z-index: 1;
+    border-radius: 6px;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+    cursor: default;
+    transition: all 40ms ease;
+}
+.card:hover {
+    box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+    transform: translate(-3%);
+}
+.card img {
+    width: 100%;
+    height: 210px;
+}
+.card .contenido {
+    padding: 15px;
+    text-align: center;
+}
+.card .contenido p {
+    line-height: 1.5;
+    color: #6a6a6a;
+}
+.card .contenido h3 {
+    font-weight: 400;
+    margin-bottom: 15px;
+}
+.card .contenido a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px;
+    margin-top: 10px;
+    color: #2fb4cc;
+    border: 1px solid #2fb4cc;
+    border-radius: 4px;
+    transition: all 400ms ease;
+}
+.card .contenido a:hover {
+    background: #2fb4cc;
+    color:#fff
+}
+
+/* Estilos para la barra lateral */
+.contenedor{
+position: relative;
+}
+.botones-acceso{
+position: absolute;
+top: 0;
+right: 200px;
+}
+.sidebar {
+position: fixed;
+top: 0;
+right: 0;
+background: linear-gradient(to bottom, #1a1a2e, #16213e, #1b2a41, #1e3a4b, #1c4859, #166b63, #117a65, #0a9053, #038c43, #008c3a);
+z-index: 1000;
+height: 100%;
+display: flex;
+align-items: center;
+flex-direction: column;
+/*background: rgba(255, 255, 255, 0.2);*/
+backdrop-filter: blur(12px);
+-webkit-backdrop-filter: blur(10px);
+/*border-right: 1px solid rgba(255, 255, 255, 0.7);*/
+transition: width 0.3s ease;
+}
+
+/* Ancho de la barra lateral al pasar el ratón */
+.sidebar:hover {
+width: 180px;
+}
+
+/* Estilos para el logotipo dentro de la barra lateral */
+.sidebar .logo {
+color: #000;
+display: flex;
+align-items: center;
+padding: 35px 60px 15px;
+}
+
+/* Estilos para la imagen del logotipo */
+.logo img {
+width: 64px;
+border-radius: 10%;
+}
+
+/* Estilos para el texto del logotipo */
+.logo h2 {
+color: #3feed1;
+font-size: 1.15rem;
+font-weight: 600;
+margin-left: 15px;
+display: none;
+}
+
+/* Mostrar el texto del logotipo al pasar el ratón */
+.sidebar:hover .logo h2 {
+display: block;
+}
+
+/* Estilos para los enlaces dentro de la barra lateral */
+.sidebar .links {
+list-style: none;
+margin-top: 10px;
+overflow-y: auto;
+scrollbar-width: none;
+height: calc(100% - 200px);
+}
+
+/* Ocultar la barra de desplazamiento */
+.sidebar .links::-webkit-scrollbar {
+display: none;
+}
+
+/* Estilos para los elementos de la lista de enlaces */
+.links li {
+color: #ffff;
+display: flex;
+border-radius: 4px;
+align-items: center;
+margin-bottom: 25px; /* Agrega un margen inferior para separar los elementos */
+}
+
+/* Estilos para los iconos */
+.links li .material-icons-outlined {
+margin-right: 25px; /* Agrega un margen derecho para separar los iconos de los textos */
+}
+
+
+.links li a {
+    padding: 10px;
+    color: #3feed1;
+    font-weight: 500;
+    white-space: nowrap;
+    text-decoration: none;
+    transition: all 0.3s ease; /* Transición suave para la sombra */
+}
+/* Sombra al hacer hover */
+.links li:hover {
+    box-shadow: 0px 0px 20px 10px rgba(0, 0, 0, 0.205); /* Sombra más grande */
+} 
+/* Mostrar los enlaces al pasar el ratón */
+.sidebar:hover .links li a {
+display: block;
+}
+
+/* Estilos para el enlace de cierre de sesión */
+.links .logout-link {
+margin-top: 20px;
+}
+
+ /* Estilos base para los botones */
+.social-buttons {
+list-style: none;
+padding: 0;
+margin: 0;
+display: flex;
+}
+/* Estilos para los botones de redes sociales */
+.social-buttons {
+list-style: none;
+padding: 0;
+margin: 0;
+display: flex;
+}
+
+.social-buttons li {
+margin-right: 10px;
+}
+
+/* Estilos para las burbujas */
+.social-buttons li a {
+display: flex;
+align-items: center;
+justify-content: center;
+width: 50px;
+height: 50px;
+border-radius: 50%;
+background-color: #0077cc; /* Cambia este color por el color de fondo deseado */
+text-align: center;
+line-height: 50px;
+color: white;
+font-size: 20px;
+text-decoration: none;
+transition: all 0.3s ease;
+}
+
+/* Estilo para el icono */
+.social-buttons li a i {
+transition: inherit;
+}
+
+/* Efecto hover */
+.social-buttons li a:hover {
+transform: scale(1.1); /* Cambia la escala para ajustar el efecto deseado */
+box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3); /* Sombra para el efecto de elevación */
+}
+
+/* Muestra el texto al hacer hover */
+.social-buttons li a:hover span {
+display: inline-block;
+}
+
+/* Estilos para iconos específicos */
+/* Puedes añadir más estilos personalizados para cada red social */
+.social-buttons .facebook a {
+background-color: #3b5998; /* Color de Facebook */
+}
+
+.social-buttons .whatsapp a {
+background-color: #25D366; /* Color de WhatsApp */
+}
+
+.social-buttons .linkedin a {
+background-color: #0077B5; /* Color de LinkedIn */
+}
+
+.social-buttons .twitter a {
+background-color: #1da1f2; /* Color de Twitter */
+}
+/* Estilos para dispositivos con un ancho máximo de 600px (pantallas pequeñas) */
+@media only screen and (max-width: 600px) {
+    .container {
+        width: 100%; /* El contenedor ocupa el 100% del ancho del contenedor padre */
+    }
+
+    .card {
+        width: 100%; /* La tarjeta ocupa el 100% del ancho de la ventana del navegador */
+    }
+}
+
+/* Estilos para dispositivos con un ancho mínimo de 601px (pantallas medianas y grandes) */
+@media only screen and (min-width: 601px) {
+    .container {
+        width: 90%; /* El contenedor ocupa el 90% del ancho del contenedor padre */
+    }
+
+    .card {
+        width: 80%; /* La tarjeta ocupa el 80% del ancho de la ventana del navegador */
+    }
 }
