--- a/templates/calendario.html
+++ b/templates/calendario.html
@@ -27,25 +27,25 @@
         <ul class="links">
             <h4>Menu Principal</h4>
             <li>
-                <i class="fas fa-home"></i>
+                <i class="fas fa-home"></i> <!-- Se corrigió la clase de los iconos -->
                 <a href="#">Inicio</a>
             </li>
             <li>
                 <i class="far fa-calendar"></i>
-                <a href="#">Calendario</a>
+                <a href="calendario.html">Calendario</a>
             </li>
             <h4>Universidad</h4>
             <li>
                 <i class="fas fa-graduation-cap"></i>
-                <a href="#">Facultades</a>
+                <a href="/templates/facultades.html">Facultades</a>
             </li>
             <li>
                 <i class="fas fa-futbol"></i>
                 <a href="#">Deportes</a>
             </li>
             <li>
-                <i class="fas fa-users"></i>
-                <a href="#">Seminarios</a>
+                <i class="fas fa-users"></i></i>
+                <a href="./seminario.html">Seminarios</a>
             </li>
             <li>
                 <i class="far fa-calendar-alt"></i>
@@ -53,24 +53,24 @@
             </li>
             <li>
                 <i class="fas fa-comments"></i>
-                <a href="#">Conferencia</a>
+                <a href="./Conferencias.html">Conferencia</a>
             </li>
             <li>
                 <i class="fas fa-tools"></i>
-                <a href="#">Talleres</a>
+                <a href="./Talleres.html">Talleres</a>
             </li>
             <h4>Cuenta</h4>
             <li>
                 <i class="fas fa-user-circle"></i>
-                <a href="#">Perfil</a>
+                <a href="/templates/Perfil.html">Perfil</a>
             </li>
             <li>
                 <i class="fas fa-bell"></i>
-                <a href="#">Notificaciones</a>
+                <a href="/templates/Notificaciones.html">Notificaciones</a>
             </li>
             <li class="logout-link">
                 <i class="fas fa-sign-out-alt"></i>
-                <a href="#">Cerrar Sesión</a>
+                <a href="/templates/inicio.html">Cerrar Sesión</a><!-- Colocar la pagina inicial que creara willy-->
             </li>
         </ul>
     </aside>
