--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -39,7 +39,7 @@
     </div>
     <aside class="sidebar">
         <div class="logo">
-            <img src="../Imagenes/logo.png" alt="logo">
+            <img src="../Imagenes/logokchimbo64.ico" alt="logo">
             <h2>El Ricón del cachimbo</h2>
         </div>
         <ul class="links">
