--- a/templates/registro.html
+++ b/templates/registro.html
@@ -71,6 +71,8 @@
             <!-- Etiqueta y campo de texto para ingresar el nombre -->
             <label class="input-label" for="nombre">Ingresa tu nombre</label>
             <input type="text" id="nombre" name="nombre" required><br>
+            <label class="input-label" for="apellido">Ingresa tu apellido</label>
+            <input type="text" id="apellido" name="apellido" required><br>
             <!-- Etiqueta y campo de texto para ingresar el DNI -->
             <label class="input-label" for="dni">Ingresa tu DNI</label>
             <input type="text" id="dni" name="dni" required><br>
