--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -8,25 +8,7 @@
     <!-- Se corrigió la URL de la fuente de Material Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../Estilo/Iconos.css">
-    <style>
-        .botones-acceso {
-            position: fixed;
-            top: 0;
-            right: 0;
-            margin: 20px;
-        }
-
-        .botones-acceso ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .botones-acceso ul li {
-            display: inline;
-            margin-right: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="../Estilo/botones-inicio.css">
 </head>
 
 <body>
