--- a/Estilo/Imagenes-movimiento.css
+++ b/Estilo/Imagenes-movimiento.css
@@ -93,35 +93,47 @@
 .links .logout-link {
     margin-top: 20px;
 }
-
-/* Estilos para la secuencia de imágenes */
-.slideshow-container {
-    width: 40%; /* Ancho para las imágenes */
-    max-width: 600px; /* Ancho máximo para las imágenes */
-    margin: 30vh 1% 0; /* Centrar verticalmente y dejar un pequeño margen arriba */
-    position: absolute;
-    left: 15%; /* Centrar horizontalmente */
-    border: 10px solid #f8da2d; /* Agregar un borde alrededor de las imágenes */
-    padding: 7px; /* Espacio interno para el borde */
-}
-
 /* Estilos para las imágenes */
 .mySlides img {
     max-width: 100%; /* Ancho máximo del 100% del contenedor */
     display: block; /* Permite centrar horizontalmente */
     margin: 0 auto; /* Centrar horizontalmente */
 }
+/* Estilos para la secuencia de imágenes */
+.slideshow-container {
+    width: 40%; /* Ancho para las imágenes */
+    position: absolute;
+    max-width: 800px; /* Ancho máximo para las imágenes */
+    margin: 30vh 15%; /* Centrar verticalmente y horizontalmente */
+    overflow: hidden; /* Ocultar cualquier desbordamiento */
+    border: 5px solid #ddab21; /* Borde más delgado */
+    border-radius: 10px; /* Bordes redondeados */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+}
+
+/* Efecto de fundido para las diapositivas */
+.fade {
+    animation-name: fade;
+    animation-duration: 1s;
+}
+
+@keyframes fade {
+    from { opacity: 0; } /* Iniciar con opacidad 0 */
+    to { opacity: 1; } /* Terminar con opacidad 1 */
+}
 
 /* Estilos para la sección de video */
 .video-container {
     width: 40%; /* Ancho para el video */
     max-width: 500px; /* Ancho máximo para el video */
-    margin: 30vh auto; /* Centrar verticalmente */
+    margin: 30vh auto; /* Centrar verticalmente y horizontalmente */
     position: absolute;
-    right: 5%; /* Centrar horizontalmente */
+    right: 5%; /* Alinear a la derecha */
     padding-bottom: 22.25%; /* Proporción 16:9 para el video */
     overflow: hidden; /* Ocultar cualquier desbordamiento */
-    border: 5px solid #f8da2d; /* Agregar un borde alrededor del video */
+    border: 5px solid #ddab21; /* Borde más delgado */
+    border-radius: 10px; /* Bordes redondeados */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
 }
 
 .video-container iframe {
@@ -131,8 +143,6 @@
     width: 100%;
     height: 100%;
 }
-
-
 body {
     overflow: hidden; /* Evitar desplazamiento vertical */
 }
