Modificacion el nombre y la ruta de los estilos de la template facultades, ademas agregue los enlaces que faltaban a la template inicio sin btn

--- a/templates/facultades.html
+++ b/templates/facultades.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/facuydepo/Proyecto.hackaton/Estilo/style.css">
+    <title>Facultades | El rincón del cachimbo</title>
+    <link rel="stylesheet" href="../Estilo/facultades.css">
 </head>
 
 <body>
@@ -15,18 +15,18 @@
             <a href="#" class="facu">FACULTADES</a>
             <imput type="checkbox" id="menu" />
             <label for="menu">
-<<<<<<< HEAD
+
               <img src="/facuydepo/Proyecto.hackaton/Imagenes/menu.png" class="menu-icono" alt="">
-=======
+
                 <img src="imgns/menu.png" class="menu-icono" alt="">
->>>>>>> f6b1a46d8bd04b1920366581c4f8d07987969a47
+
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Notificacion</a></li>
-                    <li><a href="#">Perfil</a></li>
-<<<<<<< HEAD
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="./Notificaciones.html">Notificacion</a></li>
+                    <li><a href="./Perfil.php">Perfil</a></li>
+
+                    <li><a href="./inicio sin btn.html">Inicio</a></li>
                 </ul>        
             </nav>
 
@@ -131,7 +131,7 @@
                                 <a href="#">Mas información</a>
                         </div>
                     </div>
-=======
+
                 </ul>
             </nav>
 
@@ -150,14 +150,14 @@
         <img src="imgns/colegioanime.jpg" alt="">
 
     </section>
->>>>>>> f6b1a46d8bd04b1920366581c4f8d07987969a47
+
 
 </body>
 <div class="contenedor-acordeon">
 
     <h2>Facultades</h2>
     <div class="acordeon">
-<<<<<<< HEAD
+
         <input type="radio" name="acordeon" id="btn-acordeon3" class="btn-acordeon">
         <label for="btn-acordeon3">
             INGENIERÍAS Y CIENCIAS NATURALES
@@ -206,11 +206,11 @@
         <input type="radio" name="acordeon" id="btn-acordeon4" class="btn-acordeon">
         <label for="btn-acordeon4">
             CIENCIAS DE LA SALUD
-=======
+
         <input type="radio" name="acordeon" id="btn-acordeon1" class="btn-acordeon">
         <label for="btn-acordeon1">
             CIENCIAS DE LA EMPRESA
->>>>>>> f6b1a46d8bd04b1920366581c4f8d07987969a47
+
         </label>
         <div class="container">
             <div class="card">
@@ -253,7 +253,7 @@
                                 nostrum!</p>
                             <a href="#">Mas información</a>
                         </div>
-<<<<<<< HEAD
+
                     </div>
     </div>
 
@@ -273,7 +273,7 @@
     </script>
     
     
-=======
+
                         <div class="acordeon">
                             <input type="radio" name="acordeon" id="btn-acordeon2" class="btn-acordeon">
                             <label for="btn-acordeon2">
@@ -444,5 +444,5 @@
                                                                     </div>
                                                                 </div>
 
->>>>>>> f6b1a46d8bd04b1920366581c4f8d07987969a47
+
 </html>
