--- a/templates/inicio sin btn.html
+++ b/templates/inicio sin btn.html
@@ -26,16 +26,16 @@
             </li>
             <li>
                 <i class="far fa-calendar"></i>
-                <a href="#">Calendario</a>
+                <a href="./calendario.html">Calendario</a>
             </li>
             <h4>Universidad</h4>
             <li>
                 <i class="fas fa-graduation-cap"></i>
-                <a href="#">Facultades</a>
+                <a href="./facultades.html">Facultades</a>
             </li>
             <li>
                 <i class="fas fa-futbol"></i>
-                <a href="#">Deportes</a>
+                <a href="./Deporte.html">Deportes</a>
             </li>
             <li>
                 <i class="fas fa-users"></i></i>
@@ -43,7 +43,7 @@
             </li>
             <li>
                 <i class="far fa-calendar-alt"></i>
-                <a href="#">Eventos</a>
+                <a href="./eventos.html">Eventos</a>
             </li>
             <li>
                 <i class="fas fa-comments"></i>
